14. Maps - Write Some Code (#2 Section 3: Mapping Collections - Maps, Sorted Maps and Sorted Sets)

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>solution-code-hibernate-hb-01-map-collections-set</module>
         <module>solution-code-hibernate-hb-02-map-collections-list</module>
+        <module>solution-code-hibernate-hb-03-map-collections-map</module>
     </modules>
 
     <dependencyManagement>
