--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>solution-code-hibernate-hb-01-map-collections-set</module>
         <module>solution-code-hibernate-hb-02-map-collections-list</module>
         <module>solution-code-hibernate-hb-03-map-collections-map</module>
+        <module>solution-code-hibernate-hb-04-map-collections-sortedset</module>
     </modules>
 
     <properties>
@@ -61,6 +62,24 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -155,6 +174,24 @@
                 <artifactId>junit-jupiter</artifactId>
                 <version>5.7.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.20.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.javafaker</groupId>
+                <artifactId>javafaker</artifactId>
+                <version>1.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>4.0.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
