32. Inheritance Mapping - Table per Class - Coding - Part 1 (#6 Section 7)

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>solution-code-hibernate-hb-06-map-components</module>
         <module>solution-code-hibernate-hb-07-map-enum</module>
         <module>solution-code-hibernate-hb-08-inheritance-singletable</module>
+        <module>solution-code-hibernate-hb-09-inheritance-tableperclass</module>
     </modules>
 
     <properties>
