37. Inheritance Mapping - Mapped Superclass - Coding (#8 Section 9)

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>solution-code-hibernate-hb-08-inheritance-singletable</module>
         <module>solution-code-hibernate-hb-09-inheritance-tableperclass</module>
         <module>solution-code-hibernate-hb-10-inheritance-joinedtable</module>
+        <module>solution-code-hibernate-hb-11-inheritance-mappedsuperclass</module>
     </modules>
 
     <properties>
